--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,29 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# VIM
+*.swp
+
+# Go binary
+/github
+
+# Others
+out
+xxx
+
+# golang output binary directory
+bin
+
+# ignore all go swagger generated files except the configuration one
+gen/restapi/*
+gen/models/*
+#!gen/restapi/configure_insights_datasource_github.go
+
+.env
+
+# Sensitive files
+*.dump
+*.token
+*.secret
