Model output WIP 3
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/swagger/github.yaml
+++ b/swagger/github.yaml
@@ -180,6 +180,9 @@ definitions:
       Title:
         type: string
         example: My issue title
+      State:
+        type: string
+        example: open, closed, merged
       DataSourceId:
         type: string
         example: github
