--- a/swagger/github.yaml
+++ b/swagger/github.yaml
@@ -240,6 +240,7 @@ definitions:
         description: only present if activity type is a review
       IdentityAssociaction:
         type: string
+        x-nullable: true
       Identity:
         type: object
         description: activity creator (ProjectDataSourceIdentity)
