Add model field
Signed-off-by: Łukasz Gryglicki <lgryglicki@cncf.io>

--- a/swagger/github.yaml
+++ b/swagger/github.yaml
@@ -21,6 +21,9 @@ definitions:
       Name:
         type: string
         example: GitHub
+      Model:
+        type: string
+        example: changerequest, issues, repositories
       Categories:
         type: array
         items:
