--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ vendor/
 
 # Go binary
 /github
+/lambda
 
 # Others
 out
@@ -26,11 +27,6 @@ xxx
 
 # golang output binary directory
 bin
-
-# ignore all go swagger generated files except the configuration one
-gen/restapi/*
-gen/models/*
-#!gen/restapi/configure_insights_datasource_github.go
 
 .env
 
