--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.17
+      - image: cimg/go:1.17.3
     working_directory: /go/src/github.com/LF-Engineering/insights-connector-github
     steps:
       - checkout
