--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/go:1.17.3
+      - image: circleci/golang:1.17
+    working_directory: /go/src/github.com/LF-Engineering/insights-connector-github
     steps:
       - checkout
       - run:
@@ -12,6 +13,10 @@ jobs:
           name: Build Executable
           command: make github
       - setup_remote_docker
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - github
 
   deploy: &deploy
     docker:
@@ -19,6 +24,8 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - attach_workspace:
+          at: ./
       - run:
           name: Install awscli
           command: pip install awscli
