update build step of circleci to do a full build with lint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: git config --global url."https://${GITHUB_TOKEN}:x-oauth-basic@github.com/LF-Engineering".insteadOf "https://github.com/LF-Engineering"
       - run:
           name: Build Executable
-          command: make github
+          command: make
       - setup_remote_docker
       - persist_to_workspace:
           root: ./
