--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ workflows:
             - build
           filters:
             branches:
-              only: handl-missing-error #main
+              only: main
             tags:
               ignore: /.*/
       - approve_prod:
