enhance pullrequest chunks mechanism
Signed-off-by: Ayman <enkhalifapro@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ workflows:
             - build
           filters:
             branches:
-              only: main
+              only: enhance-pullrequest-chunks-mechanism #main
             tags:
               ignore: /.*/
       - approve_prod:
